--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="ham-3 ham"></div>
       </div>
       <ul class="nav-list">
-        <div class="triangle"></div>
+        <ul class="triangle"></ul>
         <li class="nav-list--item">About</li>
         <li class="nav-list--item">Services</li>
         <li class="nav-list--item">Projects</li>
@@ -156,7 +156,7 @@
       <img class="picture mobile-image" src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="sugar cubes">
     </section>
   </main>
-
+  <button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button> 
   <footer class="footer">
     <div class="footer-logo">
     </div>
