--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="ham-3 ham"></div>
       </div>
       <ul class="nav-list">
-        <ul class="triangle"></ul>
+        <li class="triangle"></li>
         <li class="nav-list--item">About</li>
         <li class="nav-list--item">Services</li>
         <li class="nav-list--item">Projects</li>
@@ -145,7 +145,7 @@
 
       </div>
     </section>
-    <section class="picture-container">
+    <div class="picture-container">
       <img class="picture desktop" src="./images/desktop/image-gallery-milkbottles.jpg" alt="milk bottles">
       <img class="picture mobile-image" src="./images/mobile/image-gallery-milkbottles.jpg" alt="milk bottles">
       <img class="picture desktop" src="./images/desktop/image-gallery-orange.jpg" alt="orange as a fruit">
@@ -154,7 +154,7 @@
       <img class="picture mobile-image" src="./images/mobile/image-gallery-cone.jpg" alt="ice-cream cone">
       <img class="picture desktop" src="./images/desktop/image-gallery-sugarcubes.jpg" alt="sugar cubes">
       <img class="picture mobile-image" src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="sugar cubes">
-    </section>
+    </div>
   </main>
   <button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button> 
   <footer class="footer">
@@ -179,7 +179,7 @@
     </div>
   </footer>
 
-  <script src="./script.js" type=""></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
